Refactor: Modularize GUI into tabs, handlers, config_io, and processing_controller
Extract GUI components from monolithic legacy file into modular structure:

GUI Tabs (gui/tabs/):
- processing_tab.py: Processing mode and I/O configuration
- resampling_tab.py: S2 resampling settings
- subset_tab.py: Spatial subset (WKT, shapefile, pixel coords)
- c2rcc_tab.py: C2RCC atmospheric correction parameters
- tss_tab.py: Jiang TSS and marine visualization config
- monitoring_tab.py: System monitoring and progress display

GUI Modules:
- handlers.py: Event handlers, validation, browse, presets
- config_io.py: Configuration save/load (JSON)
- processing_controller.py: Background processing thread management

Utilities:
- proj_fix.py: PROJ/GDAL environment configuration
- geometry_utils.py: Geometry loading (Shapefile, KML, GeoJSON, WKT)

--- a/.gitignore
+++ b/.gitignore
@@ -36,10 +36,6 @@ wheels/
 # Temporary files
 *.tmp
 *.temp
-sentinel2_tss_pipeline/__pycache__/__init__.cpython-311.pyc
-sentinel2_tss_pipeline/__pycache__/__init__.cpython-311.pyc
-sentinel2_tss_pipeline/processors/nul
-sentinel2_tss_pipeline/processors/__pycache__/snap_calculator.cpython-311.pyc
-sentinel2_tss_pipeline/processors/__pycache__/snap_calculator.cpython-311.pyc
-sentinel2_tss_pipeline/processors/__pycache__/__init__.cpython-311.pyc
-sentinel2_tss_pipeline/__pycache__/__init__.cpython-311.pyc
+tmpclaude-*
+nul
+.claude/
