--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ nul
 
 # Processing results and logs (local output)
 S2_TSS_Results/
+poster/poster_content_pt.md
+poster/poster_content.md
+poster/poster_mockup_pt.html
+poster/poster_mockup.html
