updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,13 @@ poster/poster_content_pt.md
 poster/poster_content.md
 poster/poster_mockup_pt.html
 poster/poster_mockup.html
+docs/plans/2026-02-27-full-production-audit-design.md
+docs/reviews/01-remote-sensing-scientist.md
+docs/reviews/02-gis-spatial-engineer.md
+docs/reviews/03-process-integration-engineer.md
+docs/reviews/04-python-code-quality.md
+docs/reviews/05-data-pipeline-orchestrator.md
+docs/reviews/06-performance-memory-engineer.md
+docs/reviews/07-gui-ux-reviewer.md
+docs/reviews/08-data-scientist-validation.md
+docs/reviews/review-summary.md
